# gtfs-curator

./: .gitignore  Makefile  README.md  pyproject.toml  test_gtfs_curator_utils.ipynb
.github/ISSUE_TEMPLATE/: epic.md  research-request.md
_gtfs_curator_shared_utils/: pyproject.toml  requirements.txt
_gtfs_curator_shared_utils/gtfs_curator_shared_utils/: __init__.py  bq_utils.py  catalog_utils.py  geography_utils.py  magics.py  portfolio_utils.py  publish_utils.py  sql.py  utils.py
_gtfs_curator_utils/: pyproject.toml  requirements.txt  test_requirements.txt
_gtfs_curator_utils/gtfs_curator_utils/: __init__.py  bq_utils.py  geography_utils.py  magics.py  portfolio_utils.py
_rt_msa_utils/rt_msa_utils/: __init__.py
fixtures/portfolio/: notebook_with_params_2.ipynb
gtfs_digest/: README.md  report_operator_mini.ipynb
portfolio/: portfolio.py  pyproject.toml  requirements.txt
portfolio/sites/: _basic_analyses_test.yml  _group_analyses_test.yml  _group_and_params_analyses_test.yml  _gtfs_digest_test.yml  _param_analyses_test.yml  _param_manual_title_analyses_test.yml  _readme_only_analyses_test.yml  _section_analyses_test.yml  test_tu.yml  thruway_intercity_bus.yml
rt_predictions/: Makefile  download_warehouse_tables.py  fct_daily_schedule_rt_operator_summary_marin.sql  fct_daily_schedule_rt_route_direction_summary_marin.sql  fct_monthly_schedule_rt_route_direction_summary_marin.sql  fct_stop_time_metrics_marin.sql  marin_operator_with_code.html  operator_report.ipynb  operator_report.qmd  prep_data_for_viz.py
rt_predictions_marin/: Makefile  chart_utils_for_operators.py  chart_utils_for_stops.py  download_warehouse_tables.py  fct_monthly_operator_summary_marin.sql  fct_trip_updates_stop_metrics_marin.sql  fct_trip_updates_trip_metrics_marin.sql  int_gtfs_rt__trip_updates_trip_stop_day_map_grouping_marin.sql  marin_operator.html  marin_operator.ipynb  marin_operator.qmd  report_utils.py  shared_vars.py
