[project]
name = "gtfs-curator"
version = "0.1.0"
requires-python = ">=3.11.0, <3.12.0"
dependencies = [
    "altair==6.0.0",
    "altair-transform==0.2.0",
    "dask>=2024.10.0,<2025.4.0",
    "dask-geopandas>=0.5.0",
    "gcsfs==2024.5.0",
    "geopandas>=0.14.0,<0.15.0",
    "great-tables==0.20.0",
    "gt-extras==0.0.8",
    "gtfs-curator-shared-utils",
    "gtfs-segments==2.1.7",
    "humanize~=4.6",
    "intake>=2.0.9",
    "ipython>=8.9.0,<9.0.0",
    "itables==2.7.0",
    "jinja2>=3.1.3,<4.0.0",
    "loguru>=0.6.0,<0.7",
    "mapclassify>=2.8.0,<3",
    "movingpandas==0.22.4",
    "numba>=0.62.1,<0.63.0",
    "omegaconf==2.3.0",
    "pandas>=2.0.0,<3.0.0",
    "pandas-gbq>=0.19.1,<0.20.0",
    "polars==1.22.0",
    "pyaml==21.10.1",
    "quarto==0.1.0",
    "quarto-cli==1.6.40",
    "requests>=2.31.0,<3.0.0",
    "shapely>=2.0.1,<3.0.0",
    "stonesoup==1.8",
    "typer~=0.9",
    "vegafusion==2.0.3",
    "vl-convert-python>=1.6.0",
    "xmltodict>=0.13.0,<0.14",
]

[tool.uv.workspace]
members = [
    "_gtfs_curator_shared_utils",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "black==24.10.0",
    "isort==5.10.1",
    "pre-commit>=2.18.1",
]

[tool.uv.sources]
gtfs-curator-shared-utils = { workspace = true }
