[project]
name = "curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0, <3.12.0"
dependencies = [
    "altair>=6.0.0",
    "altair-transform>=0.2.0",
    "branca>=0.8.2",
    "dask>=2026.3.0",
    "dask-geopandas>=0.5.0",
    "geopandas>=0.14.0,<0.15.0",
    "gcsfs>=2026.4.0",
    "great-tables>=0.21.0",
    "gt-extras>=0.0.8",
    "gtfs-curator-utils",
    "gtfs-segments>=2.1.7",
    "humanize~=4.6",
    "intake>=2.0.9",
    "ipython==9.6.0",
    "itables>=2.7.3",
    "jinja2>=3.1.3",
    "jupyter-book==2.1.1",
    "loguru>=0.6.0",
    "mapclassify>=2.8.0",
    "movingpandas>=0.22.4",
    "nbformat~=5.8",
    "numba>=0.62.1",
    "pandas>=2.0.0,<3.0.0",
    "pandas-gbq==0.35",
    "omegaconf>=2.3.0",
    "papermill~=2.7.0",
    "polars>=1.40.1",
    "pyaml>=26.2.1",
    "pydantic>=2.0",
    "quarto==0.1.0",
    "quarto-cli>=1.9.37",
    "requests>=2.31.0,<3.0.0",
    "shapely>=2.0.1,<3.0.0",
    "stonesoup==1.8",
    "typer~=0.9",
    "vegafusion==2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "xmltodict>=0.13.0",
]

[tool.uv.workspace]
members = [
    "_gtfs_curator_utils",
]

[tool.uv.sources]
gtfs-curator-utils = { workspace = true }
