[project]
name = "portfolio"
version = "0.1.0"
requires-python = ">=3.11.0, <3.12.0"
dependencies = [
    "gtfs_curator_utils",
	"jupyter-book==2.1.1",
    "nbformat~=5.8",
    "papermill~=2.4",
    "pydantic>=2.0",
	"python-slugify>=8.0.0",
    "typer~=0.9",
]

[tool.uv]
package = false

[tool.uv.sources]
shared-utils = { workspace = true }
